translations for the entities table

--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -94,7 +94,7 @@
   "entities":{
     "table": {
      "type":"Type",
-     "modified":"Modfied date"
+     "modified":"Last modify"
     },
     "page":{
       "title":"Entities"
