fix display date & table topbar translation
* display date base on language
* parse date (or current date is displayed)
* fix table i18n translation and remove duplicates (common vs policies)

--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -48,9 +48,6 @@
       "resource_type": "Resource Type",
       "actor": "Actor",
       "mode": "Mode",
-      "total_sngl": "One element",
-      "total_plur": "Elements: {{name}}",
-      "selected": "{{name}} selected"
     },
     "filters": {
       "mode": "Mode{{name}}",
@@ -94,7 +91,7 @@
   "entities":{
     "table": {
      "type":"Type",
-     "modified":"Last modify"
+     "modified":"Last modified on"
     },
     "page":{
       "title":"Entities"
