--- a/src/translations/translationIT.json
+++ b/src/translations/translationIT.json
@@ -23,7 +23,7 @@
   },
   "service": {
     "titles": {
-      "page": "Paths dei Servizi",
+      "page": "Percorsi dei Servizi",
       "new": "Nuovo Servizio",
       "edit": "Nuovo sotto-servizio",
       "noData": "Nessun dato disponibile"
@@ -37,7 +37,7 @@
   },
   "policies": {
     "titles": {
-      "page": "Policies",
+      "page": "Policy",
       "new": "Nuova Policy",
       "noData": "Nessun dato disponibile, per favore seleziona un Tenant",
       "edit": "Modifica {{name}}"
@@ -47,10 +47,7 @@
       "path": "Percorso dei servizi",
       "resource_type": "Tipologia risorse",
       "actor": "Utente",
-      "mode": "Modalità",
-      "total_sngl": "Un elemento",
-      "total_plur": "Elementi disponibili: {{name}}",
-      "selected": "{{name}} Selezionati"
+      "mode": "Modalità"
     },
     "filters": {
       "mode": "Modalità{{name}}",
@@ -61,7 +58,7 @@
       "actor": "Utente{{name}}"
     },
     "form": {
-      "servicePath": "Percorso dei servizi",
+      "servicePath": "Percorsi dei servizi",
       "resource": "Risorse",
       "resourceType": "Tipologia risorse",
       "mode": "Modalità",
@@ -88,10 +85,10 @@
      "endpoint":"Endpoint Link"
     },
     "page":{
-      "title":"Tipo Risorsa"
+      "title":"Tipi di Risorsa"
     }
   },
-  "entities":{
+  "entity":{
     "table": {
      "type":"Tipo",
      "modified":"Ultima modifica"
