--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -85,7 +85,7 @@
      "endpoint":"Endpoint Link"
     },
     "page":{
-      "title":"Resource Type"
+      "title":"Resource Types"
     }
   },
   "entity":{
