--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -101,6 +101,40 @@
       "type": "Type<0>{{name}}</0>"
     }
   },
+  "menu": {
+    "home": {
+      "title": "Home",
+      "page_title": "Welcome!",
+      "description": "Sweet :)"
+    },
+    "data_management" : {
+      "title": "Data Management",
+      "description": "In this area you manage the platform data, for examples the ones in Context Broker."
+    },
+    "entity" : {
+      "title": "Entities"
+    },
+    "security" : {
+      "title": "Security",
+      "description": "In this area you can manage access control policies to resources. Powered by Anubis!"
+    },
+    "policy" : {
+      "title": "Policies"
+    },
+    "administration" : {
+      "title": "Administration",
+      "description": "In this area you can manage tenants, service paths, and resource types. With great power comes great responsibility!"
+    },
+    "service" : {
+      "title": "Services"
+    },
+    "tenant" : {
+      "title": "Tenants"
+    },
+    "resourcetype" : {
+      "title": "Resource Types"
+    }
+  },
   "common": {
     "messages":{
       "sucessUpdate": "{{data}}  Updated",
