--- a/src/translations/translationIT.json
+++ b/src/translations/translationIT.json
@@ -104,7 +104,7 @@
   "menu": {
     "home": {
       "title": "Home",
-      "page_title": "Benveunuto!",
+      "page_title": "Benvenuto!",
       "description": "Easter Egg :)"
     },
     "data_management" : {
