add robustness to date parsing

--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -136,6 +136,7 @@
     }
   },
   "common": {
+    "invalidDate": "Invalid date",
     "messages":{
       "sucessUpdate": "{{data}}  Updated",
       "sucessCreate": " A {{data}} has been created",
