different enabling changes
1. enable logout button
2. enable profile button
3. force redirect to 403 when accessing not authorized pages

--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -136,6 +136,8 @@
     }
   },
   "common": {
+    "notAuthorized" : "Not Authorized",
+    "goHomePage": "Go to the home page",
     "invalidDate": "Invalid date",
     "messages":{
       "sucessUpdate": "{{data}}  Updated",
