404 page + simple tests

--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -137,6 +137,7 @@
   },
   "common": {
     "notAuthorized" : "Not Authorized",
+    "notFound" : "Not Found",
     "goHomePage": "Go to the home page",
     "invalidDate": "Invalid date",
     "messages":{
