--- a/src/translations/translationIT.json
+++ b/src/translations/translationIT.json
@@ -136,6 +136,9 @@
     }
   },
   "common": {
+    "notAuthorized" : "Non Autorizzata",
+    "notFound" : "Non Trovata",
+    "goHomePage": "Torna alla home page",
     "invalidDate": "Data non valida",
     "messages":{
       "sucessUpdate": "{{data}}  Aggiornato",
