--- a/src/translations/translationEN.json
+++ b/src/translations/translationEN.json
@@ -136,6 +136,9 @@
     }
   },
   "common": {
+    "notAuthorized" : "Not Authorized",
+    "notFound" : "Not Found",
+    "goHomePage": "Go to the home page",
     "invalidDate": "Invalid date",
     "messages":{
       "sucessUpdate": "{{data}}  Updated",
