documentation for the form

--- a/documentation/stories/AnIntroduction.stories.mdx
+++ b/documentation/stories/AnIntroduction.stories.mdx
@@ -119,7 +119,7 @@ import serviceImage from './images/service.png';
 # Auth-Management UI For Anubis
 
 
-<Subtitle>Introduction: what is the Auth-Management UI?</Subtitle>
+## Introduction: what is the Auth-Management UI?
 
 The Auth-Management UI provides a web based interface for
 [Anubis policy-api](https://github.com/orchestracities/anubis)
@@ -136,7 +136,7 @@ properties.
 
 <img src={policiesImage}  />
 
-<Subtitle>Documentation structure</Subtitle>
+## Documentation structure
 
 The documentation groups components by type based on their usage. There are for
 examples components specific to `Tenants` or `Policies` data models and related
@@ -149,7 +149,7 @@ Beside Canvas section, each component documentation has also a Docs section that
 provides information on the usage of the component, and its properties.
 Every property has a type, default values and a description.
 
-<Subtitle>External libraries used</Subtitle>
+## External libraries used
 
 **Auth-Management UI** For Anubis is using [MUI or material UI](https://mui.com/)
 to define most of the grid and components leveraging the last version of the
@@ -169,7 +169,7 @@ implementation of OpenID standard.
 
 <img src={serviceImage}  />
 
-<Subtitle>Components architecture</Subtitle>
+## Components architecture
 
 The components inside the app are all pure functional components created using
 [react hooks](https://en.reactjs.org/docs/hooks-intro.html) this choice was made 
@@ -180,7 +180,7 @@ the components should be rendered with a different type of data inside another
 page this can be achieved without changing the entire nesting architecture.
 
 
-<Subtitle>Code structure</Subtitle>
+## Code structure
 
 The UI code is organized as follow:
 
