--- a/src/translations/translationIT.json
+++ b/src/translations/translationIT.json
@@ -99,6 +99,31 @@
     "filters": {
       "path": "Percorso servizi{{name}}",
       "type": "Tipo<0>{{name}}</0>"
+    },
+    "form":{
+       "new": "Nuova entità",
+      "edit": "Edit {{name}}",
+    "servicePath":"Percorsi dei servizi",
+    "type":"Tipologia",
+     "add":"Nuovo Attributo",
+       "editJSON":"Modifica il JSON di: <0>{{name}}</0>",
+      "editMAP":"Modifica la posizione di: <0>{{name}}</0>",
+       "geoJSONerror":"Formato Geo-Json non valido!",
+       "JSONerror":"JSON noN valido!",
+    "name":"Nome",
+      "restore":"Ripristina valori",
+     "selectType": {
+      "number": "Numero",
+      "date": "Data",
+      "bool": "Boleano",
+      "text": "Testo",
+      "json": "JSON",
+      "map": "Geo:Json"
+    }
+    },
+     "titles": {
+      "new": "Nuova entità",
+      "edit": "Modifica entità: <0>{{name}}</0>"
     }
   },
   "menu": {
